--- a/index.html
+++ b/index.html
@@ -235,6 +235,8 @@
                       <b>Address:</b> B wing, 304, Mittal tower MG Road Bangalore-560 001<br>
                     <span class="glyphicon glyphicon-phone" aria-hidden="true"></span>
                       <b>Phone:</b> +91-944 805 6750<br>
+                    <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
+                      <b>Email:</b> info@digitalmediapro.in<br>
                     <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
                       <b>Office:</b> 080 417 222 99
                   </div>
