--- a/index.html
+++ b/index.html
@@ -236,7 +236,7 @@
                     <span class="glyphicon glyphicon-phone" aria-hidden="true"></span>
                       <b>Phone:</b> +91-944 805 6750<br>
                     <span class="glyphicon glyphicon-envelope" aria-hidden="true"></span>
-                      <b>Email:</b> info@digitalmediapro.in<br>
+                      <b>Email: </b><a href="mailto: info@digitalmediapro.in">info@digitalmediapro.in</a><br>
                     <span class="glyphicon glyphicon-phone-alt" aria-hidden="true"></span>
                       <b>Office:</b> 080 417 222 99
                   </div>
